Added tests coverage.